--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,11 @@
         android:theme="@style/Theme.MyFamilySpace"
         tools:targetApi="31">
         <activity
+            android:name=".PantallaPrincipalPeliculas"
+            android:exported="false" />
+        <activity
             android:name=".PantallaCrearActividad"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".PantallaPrincipalActividades"
             android:exported="false" />
@@ -27,12 +30,12 @@
         <activity
             android:name=".IniciarSesion"
             android:exported="true">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true" />
