Pantalla categoria Romance

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,20 @@
         android:theme="@style/Theme.MyFamilySpace"
         tools:targetApi="31">
         <activity
+            android:name=".CategoriaRomance"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".CategoriaFiccion"
             android:exported="true" />
         <activity
             android:name=".CategoriaComedia"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".CategoriaAccion"
             android:exported="false" />
@@ -53,12 +62,8 @@
             android:exported="false" />
         <activity
             android:name=".IniciarSesion"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="true"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true" />
